# extirpation

./: .gitignore  README.md  TODO_CIPHERS.txt  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
online/: a1z26.py  adfgx.py  affine.py  affine_progressive.py  alphabet_filter.py  amsco_transposition.py  ascii_shift.py  atbash.py  atbash_extended.py  base64_cipher.py  beaufort.py  beaufort_autokey.py  braille_unicode.py  caesar.py  caesar_autoshift.py  caesar_box.py  caesar_prime.py  caesar_progressive.py  case_flip_caesar.py  chained_rot.py  chunk_reverse_transpose.py  chunk_swap.py  columnar_snake.py  columnar_transposition.py  disrupted_transposition.py  double_transposition.py  fibonacci_caesar.py  gronsfeld.py  keyword_caesar.py  leetspeak.py  mirror_chunks.py  morse.py  multiplicative_cipher.py  null_cipher_word_mode.py  paired_atbash_caesar.py  paired_caesar.py  paired_vigenere.py  permutation_blocks.py  pig_latin.py  pigpen.py  (+32 more)
online/wordlist/: FREQUENCY_NOTES.md  NEAR_DUPLICATES_ALLOWLIST.txt  README.md  TODO_LANGUAGES.txt
online/wordlist/arabic/: arabic.txt  pashto.txt  persian.txt  urdu.txt
online/wordlist/armenian/: armenian.txt
online/wordlist/bengali/: bengali.txt
online/wordlist/cyrillic/: bulgarian.txt  kazakh.txt  russian.txt  serbian.txt  ukrainian.txt
src/extirpation/: __init__.py  cli.py  easy.py  key_autoguesser.py  online_loader.py  setup.py
tests/: conftest.py  test_key_autoguesser.py  test_loader_and_modules.py  test_wordlist_quality.py
tools/: wordlist_near_duplicates.py  wordlist_validate.py
(+323 files in other folders)
