[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extirpation"
version = "2.6.13"
description = "Auto-load Python modules from an online folder without manual updates"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "extirpation" }
]
keywords = ["plugins", "dynamic-import", "module-loader", "online"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/example/extirpation"
Repository = "https://github.com/example/extirpation"
Issues = "https://github.com/example/extirpation/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
  "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
extirpation = ["bundled_online/*.py"]

[project.scripts]
extirpation = "extirpation.cli:main"
